css/character.css
.profilerow {
   display: grid;
    grid-template-columns: repeat(auto-fill,minmax(500px,1fr));
    gap: 1em
}
@media only screen and (max-width: 600px) {
    .profilerow {
        grid-template-columns:repeat(auto-fill,minmax(400px,1fr))
    }
}

table
{width: 100%;
}
table, th, td {
  text-align: left;
  padding: 1px;
  font-size: 16px;
}

.sidebar, .content-column {
  box-sizing: border-box;
}

.sidebar {
position: fixed;
  width: 30%;
  float: left;
  background-color: white;
  padding: 10px;
  text-align: center;
  border-image: linear-gradient(90deg, #a8db83, #42b9f5) 30;
  border-width: 2px 0px 0px 0px;
  border-style: solid;
}
.sidebar-box{
padding: 10px 25px 10px 25px;
  font-size: 14px;
  background-color: white;
  text-align: left;
border: 2px solid #827d78;
}
.sidebar-title{
transition: transform .2s;
text-align: left;
font-size: 15px;
color: #07383d;
}
.labelcategory:hover {
transform: scale(1.01);
}

.content-bg{
background-color:white;
}

.content-column {
  float: left;
  width: 65%;
  margin-left: 32%;
}
.content-column {
display: grid;
grid-template-columns: repeat(auto-fill,minmax(425px,1fr));
gap: 1em;
}
.column {
    position: relative;
    border-radius: .25em;
    overflow: hidden
}
@media only screen and (max-width: 600px) {
    .content-column {
        grid-template-columns:repeat(auto-fill,minmax(200px,1fr))
    }
}
.profile-column {
    text-align: left;
font-size: 16px;

}

.profile-render{
max-width: 600px;
}

.charachibi-nav{
padding: 2px;
background-color: #160101;
color: white;
text-align: center;
font-size: 16px;
border-radius:15px;
padding: 2px 15px 2px 20px;
width: 45%
}
.character {
border-radius: 10px;
padding: 5px;
max-width: 400px;
}
.character img{
border-radius: 10px;
filter: grayscale(80%);
opacity: 0.5;
background-color: white;
border: 2px solid black;
max-height: 300px;
}

.profile-stories{
display: grid;
grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
gap: .5em
}

.unitsrow{
max-width: auto;
}

.unit2-row{
display: grid;
grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
}

.unit-story-hint {
  max-height: auto;
  max-width: 300px;
  position: relative;
  object-fit: cover;
  padding: 0 0 10px 0;
}

.unit-name{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #6e1515;
color: white;
text-align: left;
font-size: 12px;
border-radius: 10px;
padding: 0 25px 0 25px;
bottom: 0;
left: 0;
bottom: 10%;

visibility: hidden;
opacity: 0;

transition: opacity .3s ease, visibility .2s ease;
}
.profile-unitsquare {
  max-height: auto;
  max-width: auto;
  position: relative;
  object-fit: cover;
}
.profile-unitsquare:hover .unit-name {
  visibility: visible;
  opacity: 1;
}

.profile-unitsquare2 {
  max-height: auto;
  max-width: auto;
  position: relative;
  object-fit: cover;
}
.profile-unitsquare2:hover .unit-name {
  visibility: visible;
  opacity: 1;
}

.profilequote{
color: #4D1700;
font-size: 17px;
font-family: Georgia, serif;
text-align: center;
padding: 10px;}

.keitonav {
  overflow: hidden;
  background-color: #3C6800  ;
  color: white;
  width: 100%;
}
.keitonav a {
  float: center;
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
}
.keitonav a:hover {
  background-color: #BDD561;
  min-width: 100%;
}
.keitodropdown {
  float: center;
  overflow: hidden;
}
.keitodropdown .keitodropbtn {
  border: none;
  outline: none;
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  margin: 0;
}
.keitonav a:hover, .keitodropdown:hover .keitodropbtn {
  background-color: #BDD561;
  min-width: 100%;
}

.keitocharacter-name{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #316745;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
transition: transform .1s;
}

.chiakinav {
  overflow: hidden;
  background-color: #870700;
  color: white;
  width: 100%;
}
.chiakinav a {
  float: center;
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
}
.chiakinav a:hover {
  background-color: #e35430;
  min-width: 100%;
}
.chiakidropdown {
  float: center;
  overflow: hidden;
}
.chiakidropdown .chiakidropbtn {
  border: none;
  outline: none;
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  margin: 0;
}
.chiakinav a:hover, .chiakidropdown:hover .chiakidropbtn {
  background-color: #e35430;
  min-width: 100%;
}


.chiakicharacter-name
{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #8a1c34;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
transition: transform .1s;
}
.chiakicharacter-name:hover{
  transform: scale(1.03);
} 

.kanatanav {
  overflow: hidden;
  background-color: #003399;
  color: white;
  width: 100%;
}
.kanatanav a {
  float: center;
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
}
.kanatanav a:hover {
  background-color: #63B9D0;
  min-width: 100%;
}
.kanatadropdown {
  float: center;
  overflow: hidden;
}
.kanatadropdown .kanatadropbtn {
  border: none;
  outline: none;
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  margin: 0;
}
.kanatanav a:hover, .kanatadropdown:hover .kanatadropbtn {
  background-color: #63B9D0;
  min-width: 100%;
}

.kanatacharacter-name
{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #008db7;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
transition: transform .1s;
}
.kanatacharacter-name:hover{
  transform: scale(1.03);
} 


.soumanav {
  overflow: hidden;
  background-color: #1B165B;
  color: white;
  width: 100%;
}
.soumanav a {
  float: center;
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
}
.soumanav a:hover {
  background-color: #9C75AA;
  min-width: 100%;
}
.soumadropdown {
  float: center;
  overflow: hidden;
}
.soumadropdown .soumadropbtn {
  border: none;
  outline: none;
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  margin: 0;
}
.soumanav a:hover, .soumadropdown:hover .soumadropbtn {
  background-color: #9C75AA;
  min-width: 100%;
}

.soumacharacter-name
{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #4D3D6A;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
transition: transform .1s;
}
.soumacharacter-name:hover{
  transform: scale(1.03);
} 

.shinobunav {
  overflow: hidden;
  background-color: #1B165B;
  color: white;
  width: 100%;
}
.shinobunav a {
  float: center;
  color: #f2f2f2;
  padding: 14px 16px;
  text-decoration: none;
}
.shinobunav a:hover {
  background-color: #9C75AA;
  min-width: 100%;
}
.shinobudropdown {
  float: center;
  overflow: hidden;
}
.shinobudropdown .shinobudropbtn {
  border: none;
  outline: none;
  font-size: 16px;
  color: white;
  padding: 14px 16px;
  background-color: inherit;
  margin: 0;
}
.shinobunav a:hover, .shinobudropdown:hover .shinobudropbtn {
  background-color: #9C75AA;
  min-width: 100%;
}

.shinobucharacter-name
{
display: flex;
flex-direction: column;
justify-content: flex-end;
position: absolute;

background-color: #D5A700;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
transition: transform .1s;
}
.soumacharacter-name:hover{
  transform: scale(1.03);
} 

.chara-square {
position: relative;
height: auto;
width: auto;
max-width: 600px;
}
.chara-square img{
background-color: black;
transition: transform .1s;
}
.chara-square:hover img{
  transform: scale(1.03);
}
.chara-square-desc{
position: relative;
justify: center;

.chara-square:hover .wip-desc{
box-shadow: 0 0 15px rgba(33,33,33,.4);
}

background-color: white;
color: black;
text-align: left;
font-size: 15px;
border-radius: 10px;
padding: 10px 25px 10px 25px;
bottom: 0;
left: 0;
}

.main-content-header{
font-size: 30px;
padding: 5px;
}

.article-bin{
display: grid;
    grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
    gap: 5px;
max-width: 100%;
padding: 5px;
border-radius: 10px;
box-shadow: 0 0 10px rgba(33,33,33,.4);

}
.article-bin img{
max-width: 100% ;
max-height: 100% ;
}
.article-title{
font-size: 22px;
}

.article-preview{
object-fit: cover;
height: 100%;
background-color: white;
}

.article-details{
display: inline-block;
font-size: 20px;
padding: 0 0 0 10px;
color: black;
text-align: left;}

.article-contributor{
display: inline-block;
font-size: 18px;
color: black;
text-align: left;}

.article-characters{
display: inline-block;
padding: 2px;
font-size: 16px;
color: black;
text-align: center;
margin: auto;
position: relative;
top: 0; left: 0; bottom: 0; right: 0;
padding: 10px;}

.profile-wrap{
display: inline-block;
width: 90%;
text-align: center;
justify-content: center;
}

.profile-badge{
background-color: #316745;
color: white;
text-align: center;
font-size: 12px;
border-radius: 15px;
padding: 0 25px 0 25px;
bottom: 20%;
right: 0;
}

.profile-widget{
border-radius: 10px;
display: inline-block;
background-color: #316745;
color: white;
float: center;
width: 75%;
padding: 2px 0 0 10px;
margin-left: 10px;
margin-bottom: 5px;
text-align: left;
font-size: 16px;
transition: transform .1s;
}
.profile-widget:hover{
  transform: scale(1.03);
}

.profile-widget2{
border-radius: 10px;
background-color: white;
color: black;
float: center;
padding: 2px 0 0 10px;
text-align: left;
font-size: 14px;
max-width: 350px;
}

.profilecharacter {

}
.profilecharacter img{
border: 2px solid black;
border-radius: 10px;
max-width: 250px;
margin: 5px auto;
}

.profile-text{
  display: flex;
  justify-content: center;
}

.entire-profile-container{
padding: 5px;
}

.chara-fact-bullet{
  position: relative;
  display: inline-block;
margin: 10px;
width: 110px;
transition: transform .1s;
}
.chara-fact-bullet:hover{
  transform: scale(1.03);
}

/* Popup container - can be anything you want */
.popup {
  position: relative;
  display: inline-block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* The actual popup */
.popup .popuptext {
  visibility: hidden;
  width: 450px;
  background-color: white;
  color: black;
  text-align: center;
  font-size: 15px;
  border: 3px solid #316745;
  border-radius: 6px;
  position: absolute;
  z-index: 10000;
  top: 70%;
  left: 60%;
  padding: 10px;
  margin-left: -80px;
}

.dismiss-message{
text-align: right;
  font-size: 13px;
}

.profile-middle-row{
  position: relative;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.profiledetails{
text-align: left;
font-size: 14px;
background-color: white;
border-radius: 6px;
color: black;
margin: 10px;
padding: 1px 0 1px 10px;
}

/* Popup arrow */
.popup .popuptext::after {
  content: "";
  position: absolute;
  top: 0;
  left: 10%;
  margin-left: 5px;
  border-width: 5px;
  border-style: solid;
  border-color: #316745 transparent transparent transparent;
}

/* Toggle this class - hide and show the popup */
.popup .show {
  visibility: visible;
  -webkit-animation: fadeIn 0.3s;
  animation: fadeIn 0.3s;
}

/* Add animation (fade in the popup) */
@-webkit-keyframes fadeIn {
  from {opacity: 0;} 
  to {opacity: 1;}
}

@keyframes fadeIn {
  from {opacity: 0;}
  to {opacity:1 ;}
}

a:link {color: #14786e; text-decoration: none;}
a:visited {color: #436e3f; text-decoration: none;}
a:hover{color: #95b092; text-decoration: none;}
a:active{color: black; text-decoration: none;}

